2단계 - 문자열 덧셈 계산기
- 리뷰반영